logs/NCA_16437103_4.err
  File "/scratch/mka7870/NCA-Chess/run.py", line 46
    )
    ^
SyntaxError: positional argument follows keyword argument
